--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@trpc/server": "^10.18.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "drizzle-orm": "^0.25.4",
     "lucide-react": "^0.220.0",
     "next": "^13.4.1",
+    "pg": "^8.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
@@ -29,12 +31,14 @@
   "devDependencies": {
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
+    "@types/pg": "^8.6.6",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
+    "drizzle-kit": "^0.17.6",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.4.1",
     "postcss": "^8.4.21",
