--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:push": "src/db/scripts/push.sh",
+    "prepare": "husky install",
+    "check:types": "tsc --pretty --noEmit",
+    "check:format": "prettier --check .",
+    "check:lint": "eslint --ext .ts,.tsx .",
+    "format": "prettier --write .",
+    "check:all": "npm run check:types && npm run check:format && npm run check:lint && npm run build"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.2.1",
@@ -39,10 +47,11 @@
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
     "drizzle-kit": "^0.17.6",
-    "eslint": "^8.36.0",
+    "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.1",
+    "husky": "^8.0.3",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
