--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "check:all": "npm run check:types && npm run check:format && npm run check:lint && npm run build"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.18.2",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
