--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.18.2",
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-separator": "^1.0.2",
+    "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
@@ -26,11 +36,14 @@
     "@trpc/server": "^10.18.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "drizzle-orm": "^0.25.4",
     "lucide-react": "^0.220.0",
     "next": "^13.4.1",
     "pg": "^8.11.0",
     "react": "18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.12.0",
