--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.6.2",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
