add source maps

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+
+SENTRY_AUTH_TOKEN=your-auth-token
+SENTRY_ORG=richard-amare
+SENTRY_PROJECT=cloudfarmsales
