--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.18.2",
+    "@hookform/resolvers": "^3.1.0",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -48,6 +50,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.6.2",
     "superjson": "1.12.2",
