refactor: move files

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint",
     "start": "next start",
     "db:generate": "drizzle-kit generate:pg",
-    "db:push": "src/db/scripts/push.sh",
+    "db:push": "src/lib/db/scripts/push.sh",
     "prepare": "husky install",
     "check:types": "tsc --pretty --noEmit",
     "check:format": "prettier --check .",
@@ -39,6 +39,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@vercel/postgres": "^0.3.1",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
@@ -46,7 +47,6 @@
     "drizzle-orm": "^0.25.4",
     "lucide-react": "^0.220.0",
     "next": "^13.4.1",
-    "pg": "^8.11.0",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
@@ -61,7 +61,6 @@
   "devDependencies": {
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
-    "@types/pg": "^8.6.6",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
